# oop_exercise_07

./: .gitignore  CMakeLists.txt
include/: command.cpp  command.hpp  document.cpp  document.hpp  editor.cpp  editor.hpp  factory.cpp  factory.hpp
include/figures/: figure.hpp  point.hpp  rectangle.hpp  square.hpp  triangle.hpp
src/: main.cpp
tests/: test.txt  test_res.txt
